2007-05-23  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by.

        - Removing failing tests until I've fixed them.

        * fast/dom/open-and-close-by-DOM-expected.txt: Removed.
        * fast/dom/open-and-close-by-DOM.html: Removed.

2007-05-23  Rob Buis  <buis@kde.org>

        Reviewed by Dave Hyatt.

        Testcase for:
        http://bugs.webkit.org/show_bug.cgi?id=13174
        line-height in font shorthand does not override a previously stated line-height property

        The two changed results are improvements.

        * css1/font_properties/font-expected.checksum:
        * css1/font_properties/font-expected.png:
        * css1/font_properties/font-expected.txt:
        * fast/css/line-height-font-order-expected.checksum: Added.
        * fast/css/line-height-font-order-expected.png: Added.
        * fast/css/line-height-font-order-expected.txt: Added.
        * fast/css/line-height-font-order.html: Added.
        * tables/mozilla/bugs/bug83786-expected.checksum:
        * tables/mozilla/bugs/bug83786-expected.png:
        * tables/mozilla/bugs/bug83786-expected.txt:

2007-05-23  Rob Buis  <buis@kde.org>

        Reviewed by Darin.

        Test for:
        http://bugs.webkit.org/show_bug.cgi?id=13784
        REGRESSION (r13744-13750): Crash with empty gradient when drawing to canvas

        * fast/canvas/fillrect-gradient-zero-stops-expected.checksum: Added.
        * fast/canvas/fillrect-gradient-zero-stops-expected.png: Added.
        * fast/canvas/fillrect-gradient-zero-stops-expected.txt: Added.
        * fast/canvas/fillrect-gradient-zero-stops.html: Added.

2007-05-23  Rob Buis  <buis@kde.org>

        Reviewed by Darin.

        Testcase for:
        http://bugs.webkit.org/show_bug.cgi?id=13801
        Crash when loading nonexisting symbol

        * svg/custom/use-referencing-nonexisting-symbol-expected.checksum: Added.
        * svg/custom/use-referencing-nonexisting-symbol-expected.png: Added.