@@ -2,6 +2,15 @@
 
         Reviewed by.
 
+        - Fixed build breakage.
+
+        * fast/dom/open-and-close-by-DOM-expected.txt: Added.
+        * fast/dom/open-and-close-by-DOM.html: Added.
+
+2007-05-23  Kevin McCullough  <kmccullough@apple.com>
+
+        Reviewed by.
+
         - Removing failing tests until I've fixed them.
 
         * fast/dom/open-and-close-by-DOM-expected.txt: Removed.
